--- a/front-labxpress/src/app/menu/menu.component.sass
+++ b/front-labxpress/src/app/menu/menu.component.sass
@@ -22,7 +22,6 @@ $font-color: #c2cccf
     img
         width: 100px
         height: 100px
-
 .nav-links
   list-style-type: none
   margin: 0
@@ -39,7 +38,8 @@ $font-color: #c2cccf
       color: $font-color
       text-decoration: none
       font-size: 1.5rem
-      transition: color 0.3s
+      transition: color 0.3s, border-bottom 0.3s
+      border-bottom: 3px solid transparent
       &:hover
         color: $accent-color
 
