Update de inicio, arreglos de menu e interacciones

--- a/front-labxpress/src/app/menu/menu.component.html
+++ b/front-labxpress/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu">
     <div class="logo">
-        <img src="/images/logo/logo_labxpress.png" alt="LabXpress Logo">
+        <a href="/inicio"><img src="/images/logo/logo_labxpress.png" alt="LabXpress Logo"></a>
       </div>
     <nav class="navbar">
         <button class="hamburger" (click)="toggleMenu()">
