--- a/front-labxpress/src/styles.sass
+++ b/front-labxpress/src/styles.sass
@@ -3,6 +3,7 @@ $primary-color: #0f2230
 $accent-color: #4ac5d2
 $font-stack: 'Arial', sans-serif
 $font-color: #c2cccf
+@import "primeicons/primeicons.css"
 
 body
     background-color: $primary-color
