--- a/front-labxpress/src/app/menu/menu.component.sass
+++ b/front-labxpress/src/app/menu/menu.component.sass
@@ -16,12 +16,13 @@ $font-color: #c2cccf
 .navbar
     display: flex
     justify-content: space-between
-    padding: 1.5rem
+    align-items: center
+    justify-content: center
     position: relative
 .logo
     img
-        width: 100px
-        height: 100px
+        width: 4rem
+        height: 4rem
 .nav-links
   list-style-type: none
   margin: 0
@@ -37,7 +38,7 @@ $font-color: #c2cccf
     a
       color: $font-color
       text-decoration: none
-      font-size: 1.5rem
+      font-size: 1rem
       transition: color 0.3s, border-bottom 0.3s
       border-bottom: 3px solid transparent
       &:hover
