--- a/front-labxpress/src/app/menu/menu.component.html
+++ b/front-labxpress/src/app/menu/menu.component.html
@@ -8,11 +8,11 @@
           <span *ngIf="menuOpen">✖</span> 
         </button>
         <ul class="nav-links" [class.open]="menuOpen">
-          <li><a href="/inicio">Inicio</a></li>
+          <li><a href="/inicio">Inici</a></li>
           <li><a href="/acerca">Acerca de</a></li>
-          <li><a href="/servicios">Servicios</a></li>
-          <li><a href="/contacto">Contacto</a></li>
-          <li><a href="/nuestra-app">Nuestra App</a></li>
+          <li><a href="/servicios">Servicis</a></li>
+          <li><a href="/contacto">Contacte</a></li>
+          <li><a href="/nuestra-app">Nostra App</a></li>
         </ul>
     </nav>
 </div>
