--- a/front-labxpress/src/styles.sass
+++ b/front-labxpress/src/styles.sass
@@ -1,9 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+/* Variables */
 $primary-color: #0f2230
 $accent-color: #4ac5d2
 $font-stack: 'Arial', sans-serif
 $font-color: #c2cccf
+
+
+/* Importación de iconos de Prime */
 @import "primeicons/primeicons.css"
 
-body
-    background-color: $primary-color
+/* Estilo global */
+body 
+    min-height: 100vh !important
+    background-repeat: no-repeat
+    background-color: #0f2230
