--- a/front-labxpress/src/app/servicios/servicios.component.html
+++ b/front-labxpress/src/app/servicios/servicios.component.html
@@ -1,5 +1,167 @@
 <app-menu></app-menu>
 
-<div class="inicio">
-    <h1>hola desde servicios</h1>
+<div class="bg-[#0f2230] text-white pt-20 lg:px-12 xl:px-6 items-center justify-center flex ">
+
+    <div class="container mx-auto px-4 flex flex-col md:flex-col md:mb-6 items-center xl:justify-center xl:p-0 xl:m-0 xl:flex-col">
+        <div class="container flex flex-col md:flex-col items-center xl:justify-center xl:flex-row md:mb-6">
+            <!-- Contenido a la izquierda -->
+            <div class="md:w-full md:mb-5 text-justify md:text-left xl:text-justify xl:justify-start xl:items-start xl:flex xl:flex-col xl:w-[65%]">
+                <div class="xl:w-[90%]">
+                    <h1 class="text-4xl font-bold text-indigo-500">Nostres serveis</h1>
+                    <p class="mt-4 text-lg">
+                        El nostre servei està dissenyat per facilitar l'accés a proves mèdiques de manera econòmica i eficient. L'objectiu és millorar l'experiència del pacient, oferint-li una atenció més pròxima i sense necessitat de desplaçar-se a un laboratori.
+                    </p>
+                    <p class="mt-4 text-lg">
+                        Alguns dels serveis que oferim a LabXpress inclouen anàlisis bàsiques com els nivells de glucosa, colesterol i altres proves de salut essencials.
+                    </p>
+                    <p class="mt-4 text-lg">
+                        La nostra estratègia de preus es basa en oferir serveis a un preu competitiu i accessible, amb estratègies com preus promocionals, paquets especials per a grups, famílies i col·lectius específics.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Galería a la derecha -->
+            <div class="sm:w-1/4 md:w-1/2 xl:w-1/4 flex justify-center mt-6 md:mt-0">
+                <p-galleria 
+                *ngIf="images?.length && images.length > 0"
+                [value]="images"
+                (valueChange)="images"
+                [indicatorsPosition]="'bottom'"
+                [showIndicators]="false"
+                [showThumbnails]="false"
+                [showIndicatorsOnItem]="showIndicatorsOnItem"
+                [containerStyle]="{ 'max-width': '', 'border': 'transparent', 'border-radius': '10px' }"
+                [showItemNavigators]="true"
+                [circular]="true"
+                >
+                    <ng-template pTemplate="item" let-item>
+                        <img [src]="item.itemImageSrc" style="width: 100%; display: block;" />
+                    </ng-template>
+                </p-galleria>
+
+            </div>
+        </div>
+        
+
+        <div class="relative w-full xl:flex xl:items-center xl:justify-start xl:ml-10 mx-auto flex-col xl:w-[90%] xl:pl-10 xl:flex-row">
+            <!-- Caja a la izquierda con la imagen -->
+            <div class="w-full xl:w-[50%] relative xl:block hidden">
+              <h1 class="text-4xl font-bold text-indigo-500 mt-10 xl:mt-0">Grafics il·lustratius de les proves que realitzem</h1>
+
+              <!-- Imagen del cuerpo humano -->
+              <img src="assets/images/services/medical_body.png" alt="Cuerpo humano" class="w-full max-w-xl">
+              
+              <!-- Puntos interactivos -->
+              <div *ngFor="let punto of puntos" 
+                   class="absolute punto punto-{{ punto.clase }} w-4 h-4 bg-[#10dfe6] rounded-full cursor-pointer transition-transform transform hover:scale-125"
+                   (click)="mostrarInformacion(punto)">
+              </div>
+            </div>
+
+                    <!-- Puntos horizontales en móvil -->
+            <div class="xl:hidden flex justify-around w-full my-2 flex-col">
+                <h1 class="text-3xl font-bold text-indigo-500 my-6 xl:mt-0">Punts il·lustratius de les proves que realitzem</h1>
+                <div class="xl:hidden flex justify-around w-full py-4">
+
+                    <div *ngFor="let punto of puntos.slice(0, 5)" 
+                        class="w-4 h-4 bg-[#10dfe6] rounded-full cursor-pointer transition-transform transform hover:scale-125"
+                        (click)="mostrarInformacion(punto)">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Caja a la derecha con la información de la prueba -->
+            <div class="w-full xl:w-[50%] p-6 bg-white shadow-md rounded-md border border-gray-200 my-6 xl:mt-0" *ngIf="informacionSeleccionada && informacionSeleccionada.pruebas.length > 0">
+              <h2 class="text-2xl font-semibold text-indigo-600" *ngIf="informacionSeleccionada">{{ informacionSeleccionada.titulo }}</h2>
+              
+              <div *ngIf="informacionSeleccionada" class="xl:w-auto xl:h-auto">
+                <div *ngFor="let prueba of informacionSeleccionada.pruebas">
+                  <h3 class="text-lg font-semibold text-indigo-500">{{ prueba.titulo }}</h3>
+                  <p class="text-gray-700 mt-2">{{ prueba.descripcion }}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+        <!-- Sección de Paquetes Personalizados y Subscripciones -->
+        <div class="container mx-auto md:px-4 flex flex-col items-center justify-center my-10 md:mt-20">
+            <h2 class="text-4xl font-bold text-indigo-500 mb-6 px-4 md:px-0">📊 Paquets personalitzats i subscripcions</h2>
+            <div class="container mx-auto px-4 flex flex-col items-center justify-center my-10 md:flex-row">
+                <!-- Plan Básico -->
+                <div class="w-full sm:w-1/2 lg:w-1/3 md:p-4">
+                    <div class="bg-[#d1dde2] text-indigo-600 rounded-lg shadow-lg p-6 h-full">
+                        <h2 class="text-3xl font-bold mb-4">💙 Plan Básico</h2>
+                        <p class="text-xl mb-4">19,99€ / mes</p>
+                        <p class="mb-4 text-gray-700">Este plan incluye las pruebas básicas necesarias para un chequeo general de salud.</p>
+                        <ul class="mb-4 text-lg text-gray-700">
+                            <li>✅ Glucosa</li>
+                            <li>✅ Colesterol</li>
+                            <li>✅ Recordatorio mensual de pruebas</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Plan Completo -->
+                <div class="w-full sm:w-1/2 lg:w-1/3 md:p-4 md:mb-0 my-12">
+                    <div class="bg-[#d1dde2] text-indigo-600 rounded-lg shadow-lg p-6 h-full">
+                        <h2 class="text-3xl font-bold mb-4">💜 Plan Completo</h2>
+                        <p class="text-xl mb-4">49,95€ / mes</p>
+                        <p class="mb-4 text-gray-700">Ideal para quienes buscan un seguimiento exhaustivo de su salud a largo plazo, con pruebas periódicas y asistencia continua.</p>
+                        <ul class="mb-4 text-lg text-gray-700">
+                            <li>✅ VIH</li>
+                            <li>✅ Embarazo</li>
+                            <li>✅ Alergias</li>
+                            <li>✅ Recordatorios automáticos para pruebas cada 3 meses</li>
+                            <li>✅ Seguimiento médico mensual</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Plan Empresas -->
+                <div class="w-full sm:w-1/2 lg:w-1/3 md:p-4">
+                    <div class="bg-[#d1dde2] text-indigo-600 rounded-lg shadow-lg p-6 h-full">
+                        <h2 class="text-3xl font-bold mb-4">💛 Plan Empresas</h2>
+                        <p class="text-xl mb-4">Personalizado</p>
+                        <p class="mb-4 text-gray-700">Diseñado para empresas que deseen ofrecer a sus empleados pruebas periódicas de salud como parte de su bienestar corporativo.</p>
+                        <ul class="mb-4 text-lg text-gray-700">
+                            <li>✅ Contacto directo con nuestro equipo médico</li>
+                            <li>✅ Pruebas personalizadas según necesidades de la empresa</li>
+                            <li>✅ Descuentos especiales por volumen de pruebas</li>
+                            <li>✅ Seguimiento de salud para empleados</li>
+                            <li>✅ Recordatorios periódicos según calendario de empresa</li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Sección de Subscripción de Seguimiento Médico -->
+        <div class="container mx-auto md:px-4 flex flex-col items-center justify-center md:my-10 mb-6 ">
+
+            <h2 class="text-4xl font-bold text-indigo-500 mb-6 px-4 md:px-0">📅 Subscripció de Seguiment Mèdic</h2>
+
+            <div class="w-full sm:w-1/2 lg:w-1/3 p-4">
+                <div class="bg-[#d1dde2] text-indigo-600 rounded-lg shadow-lg p-6 h-full">
+                    <h3 class="text-2xl font-bold mb-4">📋 Subscripció de Seguiment Mèdic</h3>
+                    <p class="text-xl mb-4">15,99€ / mes</p>
+                    <p class="mb-4 text-gray-700">Este servicio ofrece un seguimiento continuado de tu salud, con consultas periódicas y recordatorios de pruebas médicas.</p>
+                    <ul class="mb-4 text-lg text-gray-700">
+                        <li>✅ Consultas médicas telefónicas cada 3 meses</li>
+                        <li>✅ Recordatorios de pruebas periódicas</li>
+                        <li>✅ Informe de salud anual personalizado</li>
+                        <li>✅ Asesoramiento para prevención de enfermedades</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+        
+    </div>
 </div>
+
+
+<footer class="bg-[#d1dde2] text-gray-700 text-center p-4 w-full  flex justify-center relative items-end">
+    <p class="text-sm md:text-base">&copy; 2025 LabXpress. Tots els drets reservats.</p>
+</footer>
