--- a/front-labxpress/src/app/servicios/servicios.component.sass
+++ b/front-labxpress/src/app/servicios/servicios.component.sass
@@ -3,7 +3,7 @@
 
 // Media query para pantallas de 1024px y más
 
-@media (min-width: 1200px)
+@media (min-width: 1200px) and (max-height: 700px)
   .punto-p1
     top: 30.8% !important
     left: 61% !important
