--- a/front-labxpress/src/styles.sass
+++ b/front-labxpress/src/styles.sass
@@ -31,3 +31,15 @@ body
     color: white !important
 .p-button-text.p-button-secondary:hover
     background: #4B6BFF !important
+
+.p-accordionheader
+    background: #d1dde2 !important
+    color: #364153 !important
+
+.p-accordionheader:hover
+        color: #615fff !important
+
+.p-accordioncontent-content
+    background: #d1dde2 !important
+    color: #364163 !important
+    border-radius: 0px 0px 5px 5px !important
