Creada la página de contacto

--- a/front-labxpress/src/styles.sass
+++ b/front-labxpress/src/styles.sass
@@ -43,3 +43,19 @@ body
     background: #d1dde2 !important
     color: #364163 !important
     border-radius: 0px 0px 5px 5px !important
+
+.p-inputtext
+    background-color: #615fff !important
+    border: none !important
+    outline: none !important
+
+.p-inputtext-filled-focus-background
+    background-color: #615fff !important
+
+.p-inputtext:focus
+    background-color: #615fff !important
+
+.p-floatlabel label
+    color: white !important
+    background-color: #615fff !important
+    padding: 1% !important
