--- a/front-labxpress/src/app/menu/menu.component.html
+++ b/front-labxpress/src/app/menu/menu.component.html
@@ -12,7 +12,7 @@
           <li><a href="/acerca">Acerca de</a></li>
           <li><a href="/servicios">Servicis</a></li>
           <li><a href="/contacto">Contacte</a></li>
-          <li><a href="/nuestra-app">Nostra App</a></li>
+          <!-- <li><a href="/nuestra-app">Nostra App</a></li> -->
         </ul>
     </nav>
 </div>
